<resources>
    <string name="app_name">Library App</string>
    <string name="addFile">Add File Data</string>
    <string name="addMember">Add Member</string>
    <string name="checkInOut">Check In/Check Out Materials</string>
    <string name="itemStatus">Item Status</string>
    <string name="membersItems">Member\'s Checked Out Items</string>
    <string name="displayLibrary">Display Library Items</string>
    <string name="memberNumber">Card Number</string>
    <string name="itemId">Item ID</string>
    <string name="checkOut">Check Out</string>
    <string name="checkIn">Check In</string>
    <string name="main_library">Main Library</string>
    <string name="sister_library">Sister Library</string>
    <string name="findFile">Find File</string>
    <string name="fileName">File Name</string>
    <string name="books">Books</string>
    <string name="cds">CDs</string>
    <string name="dvds">DVDs</string>
    <string name="magazines">Magazines</string>
    <string name="select_library">Select Library</string>
    <string name="select_items">Select Items</string>

</resources>
