<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cheetahs.androidUI.libraryapp.androidUI.FragmentCheckInOut">

    <EditText
        android:id="@+id/editTextCardNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/memberNumber" />

    <EditText
        android:id="@+id/editTextItemId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/itemId" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_library" />

        <RadioButton
            android:id="@+id/radioSister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sister_library" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCheckOut"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkOut" />

    <Button
        android:id="@+id/btnCheckIn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkIn" />


    <TextView
        android:id="@+id/textCheckInOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="23dp" />

</LinearLayout>
