<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cheetahs.androidUI.libraryapp.androidUI.FragmentItemStatus">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_library" />

        <RadioButton
            android:id="@+id/rbSister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sister_library" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextItemId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/itemId"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbCheckStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Check Item Status" />

        <RadioButton
            android:id="@+id/rbCheckedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Checked In" />

        <RadioButton
            android:id="@+id/rbMissing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Missing" />

        <RadioButton
            android:id="@+id/rbOverdue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Overdue" />

        <RadioButton
            android:id="@+id/rbReference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Reference Only" />

        <RadioButton
            android:id="@+id/rbRemoved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Removed From Circulation" />

        <RadioButton
            android:id="@+id/rbShelving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Shelving" />

    </RadioGroup>

    <Button
        android:id="@+id/btnItemStatus"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Change Item Status"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="43dp" />

    <TextView
        android:id="@+id/textItemStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="23dp" />

</LinearLayout>
